# git-relax

./: Cargo.toml  LICENSE  README.md  config-template.yml  git-relax.sh  improved.sh  initial_ship.sh  install.sh  optimize.sh  ship.sh  ship_commit.sh  update_ship.sh  update_ship_commit.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: cm.rs  commit.rs  interactive.rs  mod.rs  pr.rs
src/llm/: client.rs  mod.rs  prompts.rs
