[package]
name = "git-relax"
version = "0.1.0"
edition = "2021"
description = "AI-powered commit & PR generator"
license = "MIT"
repository = "https://github.com/porameht/git-relax"
keywords = ["git", "ai", "cli", "commit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
cliclack = "0.3"
console = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
